# ciphlaim

./: .ghcid  .gitignore  ciphlaim.cabal  package.yaml  stack.yaml
.github/workflows/: main.yml
executable/: Main.hs
test/: AndTest.hs  ListTest.hs  Main.hs  OrTest.hs  PermTest.hs  TestCommon.hs  UniformTest.hs
